# ollama-cluster

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Functional Requirements.md  LICENSE.md  README.md  Technical Requirements.md  Test Requirements.md  about.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
benches/: routing_bench.rs
config/: ocluster.toml.example
crates/mock-ollama/: Cargo.toml
crates/mock-ollama/src/: lib.rs  server.rs  types.rs
crates/ocluster/: Cargo.toml
crates/ocluster-admin/: Cargo.toml
crates/ocluster-admin/src/: lib.rs  serve.rs
crates/ocluster-admin/static/: api.js  app.js  index.html  styles.css
crates/ocluster-agent/: Cargo.toml
crates/ocluster-agent/src/: main.rs
crates/ocluster-client/: Cargo.toml
crates/ocluster-client/src/: client.rs  lib.rs
crates/ocluster-config/: Cargo.toml
crates/ocluster-config/src/: defaults.rs  error.rs  lib.rs  loader.rs  types.rs  validate.rs
crates/ocluster-controller/: Cargo.toml
crates/ocluster-controller/src/: api.rs  discovery.rs  error.rs  health.rs  lib.rs  proxy.rs  runtime.rs  serve.rs
crates/ocluster-core/: Cargo.toml
crates/ocluster-core/src/: circuit_breaker.rs  error.rs  fingerprint.rs  lib.rs  model_mode.rs  retry.rs  routing.rs  state.rs
crates/ocluster-protocol/: Cargo.toml
crates/ocluster-protocol/src/: api.rs  error.rs  lib.rs
crates/ocluster-storage/: Cargo.toml
crates/ocluster-storage/src/: error.rs  lib.rs  migrations.rs  store.rs
crates/ocluster-tui/: Cargo.toml
crates/ocluster-tui/src/: app.rs  lib.rs  ui.rs
crates/ocluster/src/: cli.rs  main.rs  output.rs
crates/ocluster/tests/: e2e.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: harness.rs  lib.rs
docs/: traceability.md
packaging/systemd/: ocluster.service
scripts/: test.sh
tests/fixtures/: invalid-duplicate-nodes.toml  minimal.toml  multi-node.toml
