[package]
name = "ocluster-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cluster controller for Ollama Cluster"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = "1"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
ocluster-config = { workspace = true }
ocluster-core = { workspace = true }
ocluster-protocol = { workspace = true }
ocluster-storage = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mock-ollama = { workspace = true }
tempfile = "3"
