[package]
name = "ocluster-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared domain types for Ollama Cluster"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
