[package]
name = "ocluster-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SQLite persistence for Ollama Cluster"

[dependencies]
chrono = { workspace = true }
ocluster-core = { workspace = true }
ocluster-config = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
