[package]
name = "ocluster-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Interactive terminal dashboard for Ollama Cluster"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crossterm = "0.28"
ocluster-client = { workspace = true }
ocluster-protocol = { workspace = true }
ratatui = "0.29"
serde_json = { workspace = true }
tokio = { workspace = true }
