[package]
name = "test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Integration test harness for Ollama Cluster"

[dependencies]
mock-ollama = { workspace = true }
ocluster-config = { workspace = true }
ocluster-core = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[dev-dependencies]
ocluster-client = { workspace = true }
